Added some node / parameter manipulation methods to inochi2d.io

--- a/test_io.ipynb
+++ b/test_io.ipynb
@@ -58,7 +58,7 @@
    "outputs": [],
    "source": [
     "#puppet = inochi2d.io.load(\"/home/seagetch/ドキュメント/demon-lord-20220718-1.6.1.inx\")\n",
-    "puppet = inochi2d.io.load(\"./Aka-working.inx\")"
+    "puppet_aka = inochi2d.io.load(\"./Aka-working.inx\")"
    ]
   },
   {
@@ -68,7 +68,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "len(puppet.textures)"
+    "len(puppet_aka.textures)"
    ]
   },
   {
@@ -94,7 +94,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "JSON({name: json.loads(payload.decode('utf-8')) for name, payload in puppet.exts.items()})"
+    "JSON({name: json.loads(payload.decode('utf-8')) for name, payload in puppet_aka.exts.items()})"
    ]
   },
   {
@@ -106,7 +106,7 @@
    },
    "outputs": [],
    "source": [
-    "JSON(puppet.root)"
+    "JSON(puppet_aka.root)"
    ]
   },
   {
@@ -116,8 +116,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for node in puppet.nodes(name=\"Arm\"):\n",
-    "    show(node.root.get(\"name\"), (lambda x: x[0] if isinstance(x, list) else None )(node.textures())) "
+    "def _head(x):\n",
+    "    return x[0] if isinstance(x, list) else None\n",
+    "for node in puppet_aka.nodes(name=\"Arm\"):\n",
+    "    show(node.root.get(\"name\"), _head(node.textures())) "
    ]
   },
   {
@@ -127,7 +129,100 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[p.links(name=\"None\") for p in puppet.param(name=\"Arm\")]"
+    "[p.links(name=\"None\") for p in puppet_aka.param(name=\"Arm\")]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f8cab17c-35b6-4e5a-82a6-bdc3c6c65fe6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "puppet_aka = inochi2d.io.load(\"./Aka-working.inx\")\n",
+    "puppet_midori = inochi2d.io.load(\"./Midori-working.inx\")\n",
+    "\n",
+    "aka_head = puppet_aka.nodes(name=\"Face\")[0]\n",
+    "aka_tail = puppet_aka.nodes(name=\"Tail\")[0]\n",
+    "midori_head = puppet_midori.nodes(name=\"Face\")[0]\n",
+    "midori_tail = puppet_midori.nodes(name=\"Tail\")[0]\n",
+    "\n",
+    "aka_neck = puppet_aka.nodes(name=\"Neck\")[0]\n",
+    "aka_skirt = puppet_aka.nodes(name=\"Skirt\")[0]\n",
+    "aka_neck.add_child(midori_head)\n",
+    "aka_neck.remove_child(aka_head)\n",
+    "aka_skirt.add_child(midori_tail)\n",
+    "aka_skirt.remove_child(aka_tail)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b22eab7a-f371-4c70-9616-91e146735725",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "puppet_aka.clear_binding()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5f10ff5a-fb7c-417b-9015-87ef471ef22b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pa = puppet_aka.param(name=\"Head:: Yaw-Pitch\")[0]\n",
+    "pm = puppet_midori.param(name=\"Head:: Yaw-Pitch\")[0]\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Eye:: Left:: Blink\")[0]\n",
+    "pm = puppet_midori.param(name=\"Eye:: Left:: Blink\")[0]\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Eye:: Right:: Blink\")[0]\n",
+    "pm = puppet_midori.param(name=\"Eye:: Right:: Blink\")[0]\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Back Side:: Hair:: Right1:: Physics\")[0]\n",
+    "pm = puppet_midori.param(name=\"Back Side:: Hair:: Right1:: Physics\")[0]\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Back Side:: Hair:: Right2:: Physics\")[0]\n",
+    "pm = puppet_midori.param(name=\"Back Side:: Hair:: Right2:: Physics\")[0]\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Back Side:: Hair:: Left1:: Physics\")[0]\n",
+    "pm = puppet_midori.param(name=\"Back Side:: Hair:: Left1:: Physics\")[0]\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Back Side:: Hair:: Left2:: Physics\")[0]\n",
+    "pm = puppet_midori.param(name=\"Back Side:: Hair:: Left2:: Physics\")[0]\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Side Hair:: Left:: Physics\")[0]\n",
+    "pm = puppet_midori.param(name=\"Side Hair:: Left:: Physics\")[0]\n",
+    "print(pa, pm)\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "pa = puppet_aka.param(name=\"Side Hair:: Right:: Physics\")[0]\n",
+    "pm = puppet_midori.param(name=\"Side Hair:: Right:: Physics\")[0]\n",
+    "print(pa, pm)\n",
+    "pa.merge_binding(pm)\n",
+    "\n",
+    "puppet_aka.clear_binding()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54e1b0e9-63cb-4c31-8572-b61fd49473ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "[(n.root.get(\"name\"), n.root.get(\"textures\")) for n in puppet_aka.nodes(\"Ear\")]\n",
+    "[show('', tex) for tex in puppet_aka.textures]\n",
+    "True"
    ]
   },
   {
@@ -138,7 +233,7 @@
    "outputs": [],
    "source": [
     "#raw_data = inochi2d.io.dump_inp(puppet)\n",
-    "inochi2d.io.dump(\"./Aka-test.inx\", puppet)"
+    "inochi2d.io.dump(\"./Aka-test.inx\", puppet_aka)"
    ]
   },
   {
@@ -160,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4c977be2-58cc-40c6-a933-c8cf45e8d26a",
+   "id": "5dc3c1c0-2de4-4095-adab-afcbb5ee0319",
    "metadata": {},
    "outputs": [],
    "source": []
