Added basic link manipulation for inochi2d.io

--- a/test_io.ipynb
+++ b/test_io.ipynb
@@ -258,6 +258,30 @@
    "id": "5dc3c1c0-2de4-4095-adab-afcbb5ee0319",
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#puppet_d = inochi2d.io.load(\"/home/seagetch/ドキュメント/demon-lord-20220718-1.6.1.inx\")\n",
+    "#param1 = puppet_d.param(name=\"Head\")[0]\n",
+    "#param2 = puppet_d.param(name=\"Eye\")[0]\n",
+    "#param1.add_link(param=param2)\n",
+    "#inochi2d.io.dump(\"/home/seagetch/ドキュメント/demon-lord-20220718-1.6.2.inx\", puppet_d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c4f7f846-5268-4c67-814d-86c7979093f5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#JSON(param1.root)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d3efb024-34e1-42b8-b284-5da2f1e8ce76",
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
