example notebooks and codes are moved to 'examples' subdirectory.

--- a/examples/test_api.ipynb
+++ b/examples/test_api.ipynb
@@ -13,7 +13,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "71585afa-2253-42a6-b358-11fdbb0ef240",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ba20f3c8-361f-4e49-8d03-c9ac1ecc318e",
    "metadata": {},
    "outputs": [],
@@ -69,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "d621b107-d462-47a9-9b3b-4abbac119bf2",
    "metadata": {},
    "outputs": [],
@@ -83,30 +94,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "f95eefd2-5d78-41bc-acd7-c05ab79a30b8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "puppet = inochi2d.Puppet.load(\"./Aka-working.inx\")"
+    "puppet = inochi2d.Puppet.load(\"../Aka.inx\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "92431506-487d-4ac8-81e5-01879caf2277",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "viewport=600.000000,900.000000\n",
-      "zoom=0.300000\n",
-      "position=0.000000,0.000000\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inochi2d.Viewport.set(WINDOW_WIDTH, WINDOW_HEIGHT)\n",
     "print(\"viewport=%f,%f\"%inochi2d.Viewport.get())\n",
@@ -119,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "bb791418-6a35-4647-8c1e-2915142a2ddc",
    "metadata": {},
    "outputs": [],
