--- a/examples/test_io.ipynb
+++ b/examples/test_io.ipynb
@@ -1,6 +1,27 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "b77fabd1-3f7b-4393-b29c-4839e9264813",
+   "metadata": {},
+   "source": [
+    "# inx file manipulation test\n",
+    "\n",
+    "This example code shows basic model manipulation by the script.\n",
+    "This code reads the example model from file, manipulating structure directly, and write back updated model into file again.\n",
+    "\n",
+    "## Jupyter configurations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ed0a0d86-b3d9-42ae-b42e-cb121a21aabb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fc5cdb90-f265-4af4-98a4-9521bb210a17",
@@ -28,6 +49,19 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "187c968b-c294-4b11-9aed-abc57cf10eca",
+   "metadata": {},
+   "source": [
+    "## Package installation\n",
+    "inochi2d.io package depends on pillow library.\n",
+    "You can install dependent libraries by following commands.\n",
+    "\n",
+    "**NOTE** This notebook assumes to use conda for package management.\n",
+    "Please modify following for your environment."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "b7925dd3-043b-4f11-aab7-244b70106659",
@@ -35,6 +69,35 @@
    "outputs": [],
    "source": [
     "#!conda install -y pillow"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "95f6a26c-f899-49b7-921a-3a6297a9020e",
+   "metadata": {},
+   "source": [
+    "## Initialization of python script\n",
+    "This notebook assumes that inochi2d package are located at parent directory."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "698955d2-6a80-462a-ac83-d7c525f05872",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sys\n",
+    "sys.path.append(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "475a003a-25e1-42e6-8cec-65b4a41de105",
+   "metadata": {},
+   "source": [
+    "## Importing modules\n",
+    "- PIL.Image, PIL.ImageDraw: "
    ]
   },
   {
@@ -47,7 +110,20 @@
     "import inochi2d.io\n",
     "import json\n",
     "import io\n",
+    "from PIL import Image, ImageDraw\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt\n",
     "from IPython.display import HTML,JSON"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9ba4c7e-0e49-4680-8feb-2d31fe99cd87",
+   "metadata": {},
+   "source": [
+    "## Playing with models\n",
+    "### Loading .inx file into \"PuppetData\" object.\n",
+    "loading example model into memory."
    ]
   },
   {
@@ -58,7 +134,15 @@
    "outputs": [],
    "source": [
     "#puppet = inochi2d.io.load(\"/home/seagetch/ドキュメント/demon-lord-20220718-1.6.1.inx\")\n",
-    "puppet_aka = inochi2d.io.load(\"./Aka-working.inx\")"
+    "puppet_aka = inochi2d.io.load(\"../Aka.inx\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb8f24cb-ffad-4d96-a12c-5a767894917b",
+   "metadata": {},
+   "source": [
+    "### Showing number of textures in the model"
    ]
   },
   {
@@ -106,7 +190,7 @@
    },
    "outputs": [],
    "source": [
-    "JSON(puppet_aka.root)"
+    "JSON(puppet_aka.nodes(name=\"Eyeball\")[0].root)"
    ]
   },
   {
@@ -139,8 +223,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "puppet_aka = inochi2d.io.load(\"./Aka-working.inx\")\n",
-    "puppet_midori = inochi2d.io.load(\"./Midori-working.inx\")\n",
+    "puppet_aka = inochi2d.io.load(\"../Aka.inx\")\n",
+    "puppet_midori = inochi2d.io.load(\"../Midori.inx\")\n",
     "\n",
     "aka_head = puppet_aka.nodes(name=\"Face\")[0]\n",
     "aka_tail = puppet_aka.nodes(name=\"Tail\")[0]\n",
@@ -220,7 +304,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[(n.root.get(\"name\"), n.root.get(\"textures\")) for n in puppet_aka.nodes(\"Ear\")]\n",
     "[show('', tex) for tex in puppet_aka.textures]\n",
     "True"
    ]
@@ -233,7 +316,7 @@
    "outputs": [],
    "source": [
     "#raw_data = inochi2d.io.dump_inp(puppet)\n",
-    "inochi2d.io.dump(\"./Aka-test.inx\", puppet_aka)"
+    "inochi2d.io.dump(\"../Aka-test.inx\", puppet_aka)"
    ]
   },
   {
@@ -245,7 +328,7 @@
    "source": [
     "#istream = io.BytesIO(raw_data)\n",
     "#puppet2 = inochi2d.io.load_inx(istream)\n",
-    "puppet2 = inochi2d.io.load(\"./Aka-test.inx\")\n",
+    "puppet2 = inochi2d.io.load(\"../Aka-test.inx\")\n",
     "for node in puppet2.nodes(name=\"Arm\"):\n",
     "    show(node.root.get(\"name\"), (lambda x: x[0] if isinstance(x, list) else None )(node.textures())) \n",
     "display(JSON(puppet2.root))\n",
@@ -279,7 +362,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3efb024-34e1-42b8-b284-5da2f1e8ce76",
+   "id": "d397658b-815c-4389-b512-41cbef358153",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0fd16354-71bc-4516-813c-e3b8e2b45e92",
    "metadata": {},
    "outputs": [],
    "source": []
